# else

./: .gitignore  BUILDING.md  COPYING.txt  Cargo.toml  LICENSE.txt  README.md
app/web/: Cargo.toml  index.html  tailwind.config.js
app/web/design/html/: tailwind.bash  tailwind.config.js  terminal.html
app/web/design/html/terminal/: index.html  tailwind-output.css
app/web/src/: main.rs
behavior/: COPYING.txt  Cargo.toml  README.md
behavior/src/: lib.rs  stimulus.rs
client/web/: Cargo.toml  README.md
client/web/design/html/terminal/: index.html  tailwind-output.css
client/web/src/: cmd.rs  error.rs  input.rs  lib.rs  main.rs  net.rs  target.rs  ui.rs
client/web/src/cmd/: global.rs  go.rs  look.rs
client/web/src/ui/: app.rs  terminal.rs
common/network/: Cargo.toml  README.md
common/network/src/: lib.rs
common/rust/: Cargo.toml  README.md
common/rust/src/: lib.rs
common/server/: Cargo.toml  README.md
common/server/src/: lib.rs
docs/: Roadmap.md
docs/design/: README.md
docs/design/v1/: README.md
docs/licensing/: README.md
model/: Cargo.toml  README.md
model/src/: access.rs  action.rs  area.rs  builder.rs  character.rs  classes.rs  codebase.rs  composition.rs  cortex.rs  descriptor.rs  entity.rs  error.rs  identity.rs  interface.rs  inventory.rs  item.rs  lib.rs  location.rs  message.rs  modeling.rs  route.rs  session.rs  something.rs  stimulus.rs  sync.rs  testing.rs  thing.rs  timeframe.rs  universe.rs  view.rs  world.rs  zone.rs
model/src/action/: go.rs  multiply.rs
model/src/builder/: fields_changed.rs
model/src/cortex/: awareness.rs  intelligence.rs  intelligent.rs  psuedointelligent.rs  routine.rs
model/src/cortex/lobe/: intelligence.rs  machine.rs  routine.rs
model/src/hardcoded/: terminal.rs
model/src/message/: auth.rs
model/src/modeling/: build.rs  fields_changed.rs
model/src/route/: direction.rs  end.rs  endpoint.rs  junction.rs  point.rs
model/src/universe/: action.rs
model/src/view/: area.rs  interface.rs  thing.rs  world.rs
model/src/view/interface/: sync.rs
model/src/world/: action.rs  builder.rs  sync.rs
model/tests/: interaction.rs  serialization.rs
multimedia/: README.md
network/: Cargo.toml
network/src/: lib.rs
server/: Cargo.toml
server/common/: Cargo.toml
server/common/src/: lib.rs
server/frontend/: Cargo.toml
server/frontend/src/: main.rs
server/src/: lib.rs  model.rs
server/src/model/: access.rs  area.rs  builder.rs  character.rs  composition.rs  descriptor.rs  entity.rs  identity.rs  inventory.rs  item.rs  route.rs  something.rs  thing.rs  world.rs
server/src/model/route/: endpoint.rs  junction.rs  point.rs
server/universe/: Cargo.toml  README.md
server/universe/src/: lib.rs  main.rs  universe_runtime.rs  universe_server.rs  universe_service.rs
server/universe/tests/: auth.rs
server/world/: Cargo.toml  README.md  generate-certificate.sh
server/world/src/: lib.rs  main.rs
server/zone/: Cargo.toml  README.md
server/zone/src/: client_session.rs  lib.rs  main.rs  zone_runtime.rs  zone_server.rs
sql/auth/: types.sql
sql/auth/auth/: blockchain_pubkeys.sql  email_addresses.sql  interfaces.sql
sql/auth/registration/: pending_email_blockchain.sql
tools/: generate-certificate.sh
