[package]
name = "elsezone-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
bytes = { version = "1.5.0", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
bincode = "1.3.3"
tempfile = "3.9.0"

