[package]
name = "elsezone-web-client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
futures = "0.3.30"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.40"
gloo-console = "0.3.0"
elsezone-model = { version = "0.1.0", path = "../../model" }
bytes = "1.5.0"
thiserror = "1.0.56"
anyhow = "1.0.79"
bincode = "1.3.3"
elsezone-network = { version = "0.1.0", path = "../../network" }
clap = { version = "4.4.18", features = ["derive"] }
shellwords = "1.1.0"
