[package]
name = "elsezone-web-client"
version = "0.1.0"
edition = "2021"

[dependencies]
elsezone-model = { version = "0.1.0", path = "../../model" }
elsezone-network-common = { version = "0.1.0", path = "../../common/network" }
yew = { version = "0.21.0", features = ["csr"] }
futures = "0.3.30"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.40"
gloo-console = "0.3.0"
bytes = "1.5.0"
thiserror = "1.0.56"
anyhow = "1.0.79"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
