[package]
name = "elsezone-network-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
elsezone-model = { version = "0.1.0", path = "../../model" }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.57"
