[package]
name = "elsezone-server-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.33"
elsezone-model = { version = "0.1.0", path = "../../model" }
futures-util = "0.3.30"
native-tls = "0.2.11"
serde = "1.0.196"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
