[package]
name = "asmov-else-server-common"
version = "0.1.0"
edition = "2021"

[dependencies]
asmov-else-behavior = { version = "0.1.0", path = "../../behavior" }
asmov-else-model = { version = "0.1.0", path = "../../model" }
asmov-else-network-common = { version = "0.1.0", path = "../network" }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
chrono = "0.4.33"
futures-util = "0.3.30"
native-tls = "0.2.11"
serde = "1.0.196"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
