[package]
name = "elsezone-world-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
bytes = "1.5.0"
elsezone-model = { version = "0.1.0", path = "../../model" }
elsezone-network = { version = "0.1.0", path = "../../network" }
elsezone-server-common = { version = "0.1.0", path = "../common" }
futures-util = { version = "0.3.30", features = ["tokio-io", "sink"] }
native-tls = "0.2.11"
tokio = { version = "1.35.1", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }

