[package]
name = "elsezone-server-zone"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
elsezone-model = { version = "0.1.0", path = "../../model" }
futures-util = { version = "0.3.30", features = ["tokio-io", "sink"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-websockets = { version = "0.5.1", features = ["server", "sha1_smol"] }
