[package]
name = "elsezone-zone-server"
version = "0.1.0"
edition = "2021"

[dependencies]
elsezone-model = { version = "0.1.0", path = "../../model" }
elsezone-network-common = { version = "0.1.0", path = "../../common/network" }
elsezone-server-common = { version = "0.1.0", path = "../../common/server" }
bincode = "1.3.3"
bytes = "1.5.0"
futures-util = { version = "0.3.30", features = ["tokio-io", "sink"] }
tokio = { version = "1.35.1", features = ["full"] }
native-tls = "0.2.11"
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
anyhow = "1.0.79"

